fixe input text-overflow

--- a/css/blocks/add-task.css
+++ b/css/blocks/add-task.css
@@ -28,7 +28,9 @@
 }
 
 .add-task__form input {
-  width: 211px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin-right: 17px;
   padding: 15px 11px;
   border: 1px solid #d6d6d6;
